# ToolDock

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/rulesets/: protect-main.json  protect-release-tags.json
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: RELEASING.md  RELEASING.zh-CN.md
scripts/: capture-website-screenshots.ps1  check-version.mjs  prepare-ffmpeg-sidecar.mjs  prepare-hardware-monitor-sidecar.mjs  prepare-pawnio.mjs
src/: App.tsx  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/sidecars/hardware-monitor/: NOTICE.txt  Program.cs  ToolDock.HardwareMonitor.csproj
src-tauri/src/: lan.rs  lib.rs  main.rs
src/components/: ColorPickerOverlay.tsx  LanTool.tsx  RecordingTool.tsx  RegionSelectorOverlay.tsx  ScreenshotTool.tsx  SelectMenu.tsx  SettingsTool.tsx  SystemMonitorTool.tsx  ToolHeader.tsx
src/lib/: native.ts
website/: CNAME  app.js  index.html  styles.css
