[package]
name = "tooldock"
version = "0.1.0"
description = "A focused cross-platform developer desktop toolkit."
authors = ["PX Labs"]
edition = "2021"

[lib]
name = "tooldock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
dirs = "6.0.0"
netstat2 = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.39.6"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.2"
xcap = "0.9.6"
rfd = "0.15.4"
tauri-plugin-opener = "2.5.0"
