[package]
name = "tooldock"
version = "0.1.2"
description = "A focused cross-platform developer desktop toolkit."
authors = ["PX Labs"]
license = "MIT"
edition = "2021"

[lib]
name = "tooldock_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
arboard = "3.6.1"
base64 = "0.22.1"
blake3 = "1.8.2"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
chacha20poly1305 = "0.10.1"
clipboard-rs = { version = "0.3.5", default-features = false, features = ["wayland"] }
dirs = "6.0.0"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
netstat2 = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.39.6"
tauri = { version = "2.11.1", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2"
rfd = "0.15.4"
tauri-plugin-opener = "2.5.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
xcap = "0.9.6"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.4.1"
hound = "3.5.1"
wasapi = "0.23.0"
windows-capture = "2.0.0"
xcap = { version = "0.9.6", features = ["wgc"] }
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
] }
